themes/bdev/assets/sass/components/_picker.scss
[data-theme='dark'] {
  .picker .picker__reset {
    color: var(--light);
  }
}

.picker {
  $borderWidth: 6px;

  display: flex;
  justify-content: center;
  padding-top: calc(var(--gutter) * 7);

  @include media('>tablet') {
    padding-top: calc(var(--gutter) * 10);
  }

  &__container {
    padding: 0 var(--gutter);
    max-width: var(--content-width);
    width: 100%;
  }

  &__inner {
    position: relative;
    padding: 1.5rem;
    box-sizing: border-box;
    align-self: center;
    color: var(--light);
    border-radius: 6px;
    text-align: center;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    background: linear-gradient(to bottom right, #26bf80 0%, #457dd3 100%);

    @include media('>phone') {
      padding: 3rem;
    }

    h2 {
      font-size: 1.5rem;
      margin-bottom: 1rem;

      @include media('>phone') {
        font-size: 2.5rem;
      }
    }

    small {
      display: block;
      text-align: center;
      font-size: 0.75rem;
      opacity: 0.5;
    }
  }

  &__reset {
    position: absolute;
    top: var(--gutter);
    right: var(--gutter);
    background-color: transparent;
    border: none;
    padding: 0;
    cursor: pointer;
    opacity: 0.25;
    color: var(--light);
    transition: opacity 150ms;

    svg {
      width: 20px;
    }

    &:hover {
      opacity: 1;
    }
  }

  &__titleColor {
    color: var(--accent);
    background-color: var(--accent-alt);
    padding: 0.25rem 0.5rem;
    border-radius: 6px;
    font-weight: bold;
  }

  &__presets {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 1.5rem;
    justify-items: center;
    margin: 4rem 0 3rem 0;

    @include media('>phone') {
      grid-template-columns: repeat(6, 1fr);
    }

    button,
    input[type='color'] {
      height: 50px;
      width: 50px;
      border: none;
      border-radius: 50%;
      cursor: pointer;
      background-color: transparent;
      transition: transform 150ms;
      border: 4px solid rgba(225, 225, 225, 0.9);

      &:hover {
        transform: scale(1.05);
      }
    }

    .colorWrapper {
      position: relative;

      span {
        position: absolute;
        pointer-events: none;
        top: 12px;
        color: var(--accent-alt);
        left: 12.5px;
      }
      input[type='color'] {
        &::-webkit-color-swatch-wrapper {
          padding: 0;
        }
        &::-webkit-color-swatch {
          border: none;
          border-radius: 50%;
        }
        &::-moz-color-swatch {
          border: none;
          border-radius: 100%;
        }
      }
    }
  }
}

